May 3/2021 : 0.21 released
  - new : added option to change web port (see \programdata\jfbackup\settings.cfg)

Apr 15/2021 : 0.20 released
  - new : support drives whose default blocksize is not 64k

Nov 4/2020 : 0.19 released
  - new : always prep first tape before mounting first volume
  - new : set tape block size to 64k
  - new : improve client mount cleanup

Sept 19/2020 : 0.18 released
  - fix : add "<no label>" when changer is unable to read bar code label

Sept 12/2020 : 0.17 released
  - fix : some NPEs

Sept 5/2020 : 0.16 released
  - fix : improved error handling
  - new : added client status page

Jun 17/2020 : 0.15 released
  - new : add more error reporting
  - new : show online clients in status screen

May 27/2020 : 0.14 released
  - new : email notification auth now supports NTLM

Apr 27/2020 : 0.13 released
  - fix : loader was unable to find native dll

Apr 20/2020 : 0.12 released
  - fix : display tapes is descending order
  - new : added tape(s) expired date to notification

Mar 18/2020 : 0.11 released
  - fix : win64 loader now loads msvcrt dlls properly

Jan 30/2020 : 0.10 released
  - fix : restore job not detecting empty drive

Jan 2/2020 : 0.9 released
  - new : add email notification
  - new : empty drive after backup/restore operations

Dec 29/2019 : 0.8 released
  - fix : clear tape in use at start of backup

Dec 18/2019 : 0.7 released
  - fix : NPE on client side
  - UI improvements
    - client can now disconnect from server
  - successfully backed up 1.4TB from two remote servers which is all I'll ever need

Dec 13/2019 : 0.6 released
  - fix : restore job was not closing files (would eventually get closed by gc)
  - everytime I find a bug 2 mins after a release - beta testers wanted

Dec 13/2019 : 0.5 released
  - greatly improved performance
  - successfully backed up a 250GB remote volume in under 9 hrs
  - fixed restore selection issues and other UI fixes

Dec 11/2019 : 0.4 released
  - fix major issues