@@ -1,3 +1,8 @@
+June 9/2021 : 0.22 released
+  - fix : connection issues (added ping client->server)
+        : this required changes to API so older versions are not supported
+        : all servers/clients MUST be upgraded
+
 May 3/2021 : 0.21 released
   - new : added option to change web port (see \programdata\jfbackup\settings.cfg)
 
